<resources>

    <string name="app_name">HelloWorld</string>
    <string name="hello_world">Hello Android!!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="username">User Name :</string>
    <string name="pasword">Password :</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_welcome">WelcomeActivity</string>

</resources>